apps/manifest/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manifest-postgres
  namespace: homelab
spec:
  selector:
    app: manifest-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
